--- a/report/main.tex
+++ b/report/main.tex
@@ -70,7 +70,7 @@ The initial structure of this project was created using Claude Opus 4.5 (Thinkin
 \begin{enumerate}
     \item \textbf{Requirements Documentation:} A detailed \texttt{requirements.MD} file was first created manually, capturing all the specific requirements for the assignment, including the five main tasks, evaluation metrics, preprocessing guidelines, and general project constraints.
     
-    \item \textbf{AI-Assisted Scaffolding:} Using a conversational interface with Claude Opus 4.5, the AI was provided with the requirements document and the existing data folder structure. The explicit instruction was to create only the barebones project structure---placeholder files with proper organization and TODO markers---without implementing any actual functionality.
+    \item \textbf{AI-Assisted Scaffolding:} Using a conversational interface with Claude Opus 4.5, the AI was provided with the requirements document and the existing data folder structure. The explicit instruction was to create only the barebones project structure, placeholder files with proper organization and TODO markers, without implementing any actual functionality.
     
     \item \textbf{Generated Structure:} The AI created the complete project scaffold, including:
     \begin{itemize}
